<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/app_background" >

    <LinearLayout
        android:layout_width="@dimen/credentioal_area_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_text_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/text_doctor_na_rabote" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_userName"
                style="@style/EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/login_hint_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/loginPassword"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/login_hint_pass"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp" >

            <Button
                android:id="@+id/login_enter"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:text="@string/text_login" />

            <Button
                android:id="@+id/login_goto_site"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:text="@string/go_to_site" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>